#
# Scilab ( http://www.scilab.org/ ) - This file is part of Scilab
# Copyright (C) Scilab Enterprises - 2011-2013 - Clement David
#
# Copyright (C) 2012 - 2016 - Scilab Enterprises
#
# This file is hereby licensed under the terms of the GNU GPL v2.0,
# pursuant to article 5.3.4 of the CeCILL v.2.1.
# This file was originally licensed under the terms of the CeCILL v2.1,
# and continues to be available under such terms.
# For more information, see the COPYING file which you should have received
# along with this program.
#

SUBDIRS = images/icons/

# Desktop file
# Note that here, it is datadir and NOT pkgdatadir
desktopdir = $(datadir)/applications
desktop_DATA = scilab-adv-cli.desktop \
scilab-cli.desktop \
scilab.desktop \
xcos.desktop \
scinotes.desktop


# Mimetype file
# Note that here, it is datadir and NOT pkgdatadir
mimedir = $(datadir)/mime/packages
mime_DATA = scilab.xml

# AppData file
# Note that here, it is datadir and NOT pkgdatadir
appdatadir = $(datadir)/appdata
appdata_DATA = scilab.appdata.xml
