##########
### Sylvestre Ledru <sylvestre.ledru@inria.fr>
### INRIA - Scilab 2006 
##########

MALLOC_C_SOURCES = src/sci_mem_alloc.c

libmalloc_la_includedir=$(includedir)/malloc

libmalloc_la_include_HEADERS = includes/sci_mem_alloc.h \
includes/MALLOC.h

libmalloc_la_CFLAGS= 

lib_LTLIBRARIES = libmalloc.la

libmalloc_la_SOURCES = $(MALLOC_C_SOURCES)

libmalloc_la_LIBADD = 

libmalloc_la_PKGCONFIG = malloc.pc
