##########
### Sylvestre Ledru <sylvestre.ledru@inria.fr>
### INRIA - Scilab 2006 
##########

#### Target ######
modulename=lapack

pkglib_LTLIBRARIES = libscilapack.la

libscilapack_la_LDFLAGS = -version-info $(SCILAB_LIBRARY_VERSION) 

noinst_LTLIBRARIES = libdummy-lapack.la

LAPACK_FORTRAN_SOURCES = dlasv2.f \
zgeqpf.f \
zrot.f \
dpotrf.f \
zunmr3.f \
zlanhs.f \
zgebak.f \
zbdsqr.f \
zunmrz.f \
dgetc2.f \
zlaqp2.f \
dsytrd.f \
dsytd2.f \
zlange.f \
dlansp.f \
dhgeqz.f \
dlasq2.f \
dtrevc.f \
dgelsy.f \
zladiv.f \
dlaswp.f \
dormlq.f \
dorml2.f \
dlaexc.f \
zlahqr.f \
zdrot.f \
dlabad.f \
dlarft.f \
zlassq.f \
dlartg.f \
zlarf.f \
ztrexc.f \
zgeev.f \
dggbal.f \
dtrtrs.f \
zlatdf.f \
dgeqr2.f \
zlarfg.f \
dgetrs.f \
dlag2.f \
dlaqge.f \
dpotf2.f \
zgetrf.f \
ztgsy2.f \
zgebal.f \
dspgst.f \
dormqr.f \
drscl.f \
dtrti2.f \
dlaset.f \
dgeesx.f \
dpocon.f \
dlasyf.f \
dgerq2.f \
dlasq3.f \
dlansy.f \
dgehrd.f \
dgehd2.f \
dsptrd.f \
dorgtr.f \
dormrq.f \
dorm2r.f \
dormr2.f \
zgges.f \
zunglq.f \
zlanhe.f \
zungl2.f \
zhetrd.f \
zhetd2.f \
dlacon.f \
dgesvx.f \
zgetf2.f \
ztgevc.f \
dsteqr.f \
dgelqf.f \
zlarzb.f \
zlarfx.f \
dsysv.f \
zlaqps.f \
dtzrqf.f \
dsytrf.f \
xerbla.f \
dtrsyl.f \
dgelss.f \
dtgsen.f \
zgecon.f \
dormbr.f \
zlatrz.f \
zungqr.f \
dlabrd.f \
dlasq4.f \
dggev.f \
dpptrf.f \
zgelq2.f \
dgeqpf.f \
dormr3.f \
dlanhs.f \
dgerfs.f \
dlarz.f \
zgebrd.f \
zgebd2.f \
dgebak.f \
dormrz.f \
dbdsqr.f \
dspev.f \
dlaqp2.f \
zung2r.f \
dlange.f \
zgeqrf.f \
dormql.f \
zgesvd.f \
dladiv.f \
dlas2.f \
dgeequ.f \
dsytf2.f \
dlahqr.f \
zlatrs.f \
zheev.f \
ztgex2.f \
zlaic1.f \
ztrsen.f \
zlacgv.f \
dgees.f \
dlassq.f \
zlascl.f \
dtrexc.f \
dlasq5.f \
dormhr.f \
zgesc2.f \
dlatdf.f \
dsycon.f \
dlarfg.f \
dorm2l.f \
dsptrf.f \
zungbr.f \
dgesv.f \
dgetrf.f \
zhseqr.f \
dtgsy2.f \
dlaev2.f \
dgebal.f \
zlarfb.f \
zlahrd.f \
dlantr.f \
zgghrd.f \
dlatzm.f \
ztgsyl.f \
ztrtri.f \
zlatrd.f \
zlacpy.f \
zgetri.f \
dlasr.f \
zgeqp3.f \
zungql.f \
dlanst.f \
zlarzt.f \
dorglq.f \
dorgl2.f \
dlasq6.f \
dlasy2.f \
dopgtr.f \
dgeqlf.f \
dgetf2.f \
dtgevc.f \
zunghr.f \
dlarzb.f \
dlarfx.f \
zung2l.f \
zggev.f \
dzsum1.f \
dlaqps.f \
dtrcon.f \
dlasrt.f \
dsyev.f \
dorgqr.f \
dgecon.f \
dlatrz.f \
zlarz.f \
ztgexc.f \
zggbak.f \
ztzrzf.f \
dpotrs.f \
dsytri.f \
dgelq2.f \
zpotrf.f \
dgebrd.f \
dgebd2.f \
zgetc2.f \
dorgrq.f \
dorg2r.f \
dorgr2.f \
zhgeqz.f \
dgeqrf.f \
dlaln2.f \
dgesvd.f \
ztrevc.f \
zgelsy.f \
zgees.f \
zlaswp.f \
dspgv.f \
dlanv2.f \
zunmlq.f \
dlae2.f \
zunml2.f \
dlatrs.f \
dtgex2.f \
dlaic1.f \
dgels.f \
dtrsen.f \
zdrscl.f \
zlarft.f \
dlascl.f \
zlartg.f \
zggbal.f \
dgesc2.f \
dgerqf.f \
zgeqr2.f \
zgetrs.f \
ilaenv.f \
dorgbr.f \
zpotf2.f \
dhseqr.f \
dlarf.f \
dgegs.f \
dgeev.f \
dlarfb.f \
zlasr.f \
dlapy2.f \
zunmqr.f \
ztrti2.f \
dlahrd.f \
dgghrd.f \
zlaset.f \
dtgsyl.f \
dtrtri.f \
dlatrd.f \
dlacpy.f \
dgetri.f \
zgehrd.f \
zgehd2.f \
dgeqp3.f \
dorgql.f \
zungtr.f \
zunm2r.f \
dlarzt.f \
dlapmt.f \
ieeeck.f \
dlasq1.f \
dorghr.f \
zlacon.f \
dgelsx.f \
dsterf.f \
zsteqr.f \
zgelqf.f \
dsytrs.f \
dgges.f \
dorg2l.f \
dlapy3.f \
lsame.f \
ztrsyl.f \
izmax1.f \
ztgsen.f \
zunmbr.f \
zlabrd.f \
dtgexc.f \
dgeql2.f \
dlagv2.f \
dggbak.f \
dtzrzf.f \
zlaqr0.f \
dlacn2.f \
zlacn2.f \
dlazq3.f \
zlahr2.f \
dlaqr0.f \
iparmq.f \
disnan.f \
dlaisnan.f \
dlahr2.f \
zlaqr3.f \
zlaqr4.f \
zlaqr5.f \
dlazq4.f \
dlaqr3.f \
dlaqr4.f \
dlaqr5.f \
zlaqr2.f \
zlaqr1.f \
dlaqr2.f \
dlaqr1.f

libscilapack_la_SOURCES = $(LAPACK_FORTRAN_SOURCES)

libdummy_lapack_la_SOURCES = dlamch.f slamch.f

libdummy_lapack_la_FFLAGS = `echo "@FFLAGS@"| sed -e 's|-O[0-9+]|-O0|'`


libscilapack_la_LIBADD = libdummy-lapack.la 

if USE_EMBEDDED_BLAS
libscilapack_la_LIBADD += $(top_builddir)/libs/blas/libsciblas.la
else
libdummy_lapack_la_LDFLAGS = $(BLAS_LIBS)
endif

libscilapack_la_PKGCONFIG = lapack.pc

libdummy_lapack_la-dlamch.lo: dlamch.f
	$(LIBTOOL) --tag=F77 --mode=compile $(F77) $(libdummy_lapack_la_FFLAGS) -c -o libdummy_lapack_la-dlamch.lo `test -f 'dlamch.f' || echo '$(srcdir)/'`dlamch.f

libdummy_lapack_la-slamch.lo: slamch.f
	$(LIBTOOL) --tag=F77 --mode=compile $(F77) $(libdummy_lapack_la_FFLAGS) -c -o libdummy_lapack_la-slamch.lo `test -f 'slamch.f' || echo '$(srcdir)/'`slamch.f
include $(top_srcdir)/Makefile.incl.am
